test_output.txt
RUNNING: Parser_AbortOnAllocationFailure
RUNNING: Parser_AbortOnAllocationFailure
test.zig:1:15: error: Slices are not supported for C89 compatibility.
    var my_slice: []u8;
                  ^
RUNNING: Parser_AbortOnAllocationFailure
RUNNING: Parser_AbortOnAllocationFailure
test.zig:1:15: error: Slices are not supported for C89 compatibility.
    var my_slice: []u8;
                  ^
RUNNING: Parser_AbortOnAllocationFailure

--- C89 Type Mappings ---
Mapping: Zig TypeKind 0 -> C89 "void"
Mapping: Zig TypeKind 1 -> C89 "int"
Mapping: Zig TypeKind 2 -> C89 "signed char"
Mapping: Zig TypeKind 3 -> C89 "short"
Mapping: Zig TypeKind 4 -> C89 "int"
Mapping: Zig TypeKind 5 -> C89 "__int64"
Mapping: Zig TypeKind 6 -> C89 "unsigned char"
Mapping: Zig TypeKind 7 -> C89 "unsigned short"
Mapping: Zig TypeKind 8 -> C89 "unsigned int"
Mapping: Zig TypeKind 9 -> C89 "unsigned __int64"
Mapping: Zig TypeKind 12 -> C89 "float"
Mapping: Zig TypeKind 13 -> C89 "double"
-------------------------
Passed 327/327 tests
